# corrupted-spirit

./: CMakeLists.txt
x3/employee/: config.hpp  employee.hpp  fusion.adapters.hpp  main.cpp  person.hpp  rules.cpp  rules.hpp  rules_api.hpp
